fixed alignment and padding issue for contact page

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -160,7 +160,7 @@
   position: absolute;
   height: 4px;
   width: 100%;
-  background: #333;
+  background: #fff;
   border-radius: 4px;
   opacity: 1;
   left: 0;
